@@ -1,6 +1,7 @@
 March 2012 3.7
   - Login: support bind user for login search
   - Personal: added labeledURI and cosmetic changes, description is now multi-valued (RFE 3446363)
+  - File upload: support custom scripts postCreate (LAM Pro)
   - New translation: Slovakian
   - LAM Pro:
    -> Password self reset can send password notification mails
